:recycle: refactor: findBy -> existsBy로 변경